Add configuration for light profiles and favorite colors.

--- a/custom_components/scenery/translations/en.json
+++ b/custom_components/scenery/translations/en.json
@@ -2,24 +2,24 @@
     "services": {
         "get_favorite_colors": {
             "name": "Get favorite colors",
-            "description": "Gets the favorite colors of a light or light group.",
+            "description": "Gets the favorite colors of a light.",
             "fields": {
                 "entity_id": {
                     "name": "Light",
-                    "description": "The light or light group entity ID."
+                    "description": "The light's entity ID."
                 }
             }
         },
         "set_favorite_colors": {
             "name": "Set favorite colors",
-            "description": "Sets the favorite colors of a light or light group.",
+            "description": "Sets the favorite colors of a light.",
             "fields": {
                 "entity_id": {
                     "name": "Light",
-                    "description": "The light or light group entity ID."
+                    "description": "The light's entity ID."
                 },
-                "colors": {
-                    "name": "Colors",
+                "favorite_colors": {
+                    "name": "Favorite colors",
                     "description": "The favorite colors to set."
                 }
             }
